ingress/nginx-controller/gen-output/ingress-nginx-defaultbackend.ingress-nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    co.elastic.logs/fileset.stderr: error
    co.elastic.logs/fileset.stdout: ingress_controller
    co.elastic.logs/module: nginx
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.12.2
    helm.sh/chart: ingress-nginx-4.12.2
  name: ingress-nginx-defaultbackend
  namespace: ingress-nginx
spec:
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
